// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Center /> snapshot test when disabled is false 1`] = `
<div
  className="components-Center-Center__center--expand components-Center-Center__center"
>
  <div />
</div>
`;

exports[`<Center /> snapshot test when disabled is true 1`] = `
<div
  className="components-Center-Center__center--no-expand components-Center-Center__center"
>
  <div />
</div>
`;
